fixed border bottom jumped

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,21 +75,20 @@ body {
     margin: .5em 0;
 }
 
-.nav-tabs li a {
+.nav-tabs>li>a {
     font-size: 16px;
     font-weight: 700;
     color: rgba(194, 47, 47,1) !important;
+
 }
 
-.nav-tabs>li:hover,
-.nav-tabs>li.active>a{
+.nav-tabs>li>a:hover,
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover{
     border-bottom: 3px solid rgba(194, 47, 47,1);
-}
+    transition: border-bottom ease .3s;
 
-.nav-tabs>li.active {
-    border-top: 0px solid #ddd;
-    border-left: 0px solid #ddd;
-    border-right: 0px solid #ddd;
 }
 
 .nav-tabs>li>a,
@@ -101,10 +100,11 @@ body {
     border-left: 0px solid #ddd;
     border-right: 0px solid #ddd;
     background-color: #fff;
+
 }
 
 #myTab.nav-tabs {
-    border: 0px solid transparent;
+    border-bottom: 3px solid transparent;
 }
 
 ul#myTab {
